<resources>
    <string name="app_name">TheJournal</string>
    <string name="welcome_back_message_description">A greeting message as the user logs in</string>
    <string name="log_in_button_text">LOGIN</string>
    <string name="login_button_id">login</string>
    <string name="password_hint">Enter Your Password…</string>
    <string name="emailHint">Email Or Username…</string>
    <string name="already_have_an_account_button_text">ALREADY HAVE AN ACCOUNT?</string>
    <string name="input_type_is">text</string>
    <string name="forgot_password_text_view">FORGOT PASSWORD?</string>
    <string name="new_account_text_view">NEW ACCOUNT?</string>
    <string name="login_with_social_media_account">CONNECT WITH SOCIAL MEDIA ACCOUNT</string>
    <string name="sign_up_button">SIGN IN</string>
    <string name="confirm_password">Confirm Password…</string>
    <string name="register_welcome_message_description">greetingImageLogoForUser</string>
    <string name="circle_image">Description of the image that is on log in and sign up.</string>
    <string name="greeting_message_in_log_inactivity">Welcome Back!</string>
    <string name="please_log_in_into_your_account_text">Please Log In Into Your Account</string>
    <string name="or_text_view">Or</string>
    <string name="social_media_account_text_view">Log In With Social Media Account.</string>
    <string name="password_eye_description">pressing the eye icon the user  will see the password entered.</string>
    <string name="log_in_image_button_description">When the user presses this image button they will redirected to home fragment.</string>
    <string name="welcome_message_text_view">Welcome!</string>
    <string name="please_sign_up_text_view">Please Sign Up.</string>
    <string name="sing_up_image_button_description">User will get to home fragment upon clicking this button</string>
    <string name="set_up_your_account_welcome_text">Welcome!</string>
    <string name="account_settings_please_set_up_your_account_here_text">Account Settings Please Set Up Your Account.</string>
    <string name="account_settings_username_text">Enter Your Nickname…</string>
    <string name="account_settings_user_description">Who Are You?</string>
    <string name="account_settings_user_phone_number_text">Please Insert Your Phone Number…</string>
    <string name="account_settings_user_address_text">Address…</string>
    <string name="account_settings_radio_button_one_text">Male</string>
    <string name="account_settings_radio_button_two_text">Female</string>
    <string name="account_settings_set_up_button_text">READY!</string>
    <string name="account_settings_user_account_image_description">User image</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="newest_text">Newest</string>
    <string name="popular_text">Popular</string>
    <string name="other_text">Other</string>
    <string name="following_text">Following</string>
    <string name="main_activity_home_fragment_title_text">Simple Blog</string>
    <string name="search_title">Search</string>
    <string name="search_hint">Search…</string>
    <string name="floating_button_description">click here</string>
    <string name="search_text_hint">Search…</string>
    <string name="home">Home</string>
    <string name="notifications">Notifications</string>
    <string name="gallery">Gallery</string>
    <string name="account">Account</string>
    <string name="description_of_post_image">image of the post</string>
    <string name="post_title_text">Insert Title…</string>
    <string name="post_description_text">Insert Description…</string>
    <string name="post_button_text">SEND</string>
    <string name="new_post_message_text">Add A New Posts!</string>
    <string name="todo">TODO</string>
    <string name="title_activity_post">Post</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="post_title_goes_here">Post Title Goes Here</string>
    <string name="showing_the_second_one">Showing the second one!</string>
    <string name="post_title">Post Title</string>
    <string name="post_description">Post Description</string>
    <string name="submit_post">Submit Post</string>
    <string name="add_post_image">Add an image to the post you are sending.</string>
    <string name="new_post_description">Description of the new post.</string>
    <string name="new_post_recyclerview_image_text">Image of the new post.</string>
    <string name="new_post_recyclerview_user_image_text">User\'s profile image on the corner of the post.</string>
    <string name="new_post_recyclerview_likes_thumb_text">Description of the content.</string>
    <string name="new_post_recyclerview_like_text">User\'s text</string>
    <string name="new_post_location_thumbnail_description">The thumbnail button is here</string>
    <string name="new_post_location_text">Text of the post</string>
    <string name="new_post_comment_description_text">Comment of he post.</string>
    <string name="blog_post_comments_counter_text">Comment counter</string>
    <string name="post_clear_description">clearing the post</string>
    <string name="new_post_recyclerview_username_text">displaying the user\'s name</string>
    <string name="new_post_recyclerview_date_text">Displaying the date of the post.</string>
    <string name="comments_space_hint_text">Add a comment..</string>
    <string name="comments_title_text">Comments…</string>
    <string name="button_to_send_a_comment">Button to send a comment</string>
    <string name="thumb_up_image_description">Like for the comments</string>
    <string name="comment_thumb_up_likes_text">Likes</string>
    <string name="comment_text">Comment</string>
    <string name="comments_username_text">username</string>
    <string name="comments_date_text">date</string>
    <string name="comments_clear_description">Delete image</string>
    <string name="comment_reply_description">Reply</string>
    <string name="comments_edit_text_description">Edit comment</string>
    <string name="logout_button_in_main_activity">Logout</string>
    <string name="enter_message">Enter Message</string>
    <string name="send">Send</string>
    <string name="message_date">June 10</string>
    <string name="message_text">This is a Message</string>
    <string name="receiver__message_date">Message Date</string>
    <string name="receiver_profile_image_icon">User Icon</string>
    <string name="receiver_username">John Grady Cole</string>
    <string name="title_activity_comment_dragger">CommentDragger</string>
    <string name="add_comment">Add Comment</string>
    <string name="enter_comment">Enter Comment…</string>
    <string name="back_arrow">Back to Home Fragment</string>
    <string name="back">Back</string>
    <string name="back_arrow_description">Send User to Home Fragment</string>
    <string name="notificationsDate">DATE</string>
    <string name="notificationsTextView">Comment from…</string>
    <string name="memories_album_description_text">Memories Photos Go Here</string>
    <string name="album_name_title">Memories</string>
    <string name="album_description_text">Description.</string>
    <string name="delete_album_description">Delete album</string>
    <string name="zoom_image">Description of the image to zoom in</string>
    <string name="insert_name_of_existing_album">Insert Album Name…</string>
    <string name="insert_image_for_existing_album">Insert Image</string>
    <string name="_add_image_to_existing_album_progressbar">Add Image In Gallery</string>
    <string name="insert_image_to_existing_album_description">Add image\n</string>
    <string name="add_the_image_to_the_chosen_album">Send\n</string>
    <string name="title_activity_update_account">UpdateAccountActivity</string>
    <string name="title_activity_create_new_account">CreateNewAccountActivity</string>
    <string name="fragment_account_email">email</string>
    <string name="fragment_account_update_account">Update Account</string>
    <string name="fragment_account_username_title">Username</string>
    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="account_settings_title">Basic Imformation</string>
    <string name="logout_button">Logout</string>
    <string name="reply_to">Replying to</string>
    <string name="forgot_password">Forgot Password.</string>
    <string name="please_change_the_password_here">Please change the password here.</string>
    <string name="enter_new_password">Enter New Password...</string>
    <string name="enter_old_password">Enter Old Password.</string>
</resources>