<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darker_blue"
    tools:context=".activities.log_in_activities_adds_on.ForgotPasswordActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/forgot_password_inner_constraints"
        android:layout_width="350dp"
        android:layout_height="400dp"
        android:layout_marginTop="148dp"
        android:background="@drawable/background_layer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/forgot_password_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:ems="10"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/forgot_password"
            android:textAlignment="center"
            android:textColor="#EEEEEE"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/forgot_password_change_password_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:text="@string/please_change_the_password_here"
            android:textAlignment="center"
            android:textColor="#EEEEEE"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/forgot_password_id" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_text_layout_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="200dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/forgot_password_change_password_id"
            app:mtf_animationDuration="1000"
            app:mtf_openKeyboardOnFocus="true"
            app:startIconDrawable="@drawable/ic_email"
            tools:ignore="TextFields">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_text_view_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:fontFamily="@font/poppins"
                android:hint="@string/emailHint"
                android:inputType="textEmailAddress"
                android:minHeight="48dp"
                android:textColor="@color/black"
                android:textColorHint="#5C6BC0"
                android:textSize="18sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/old_password_text_layout_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email_text_layout_id"
            app:mtf_openKeyboardOnFocus="true"
            app:startIconContentDescription="Enter Email..."
            app:startIconDrawable="@drawable/ic_password">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/old_password_text_view_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:fontFamily="@font/poppins"
                android:hint="@string/enter_old_password"
                android:inputType="textPassword"
                android:minHeight="48dp"
                android:textColor="@color/black"
                android:textColorHint="#5C6BC0"
                android:textSize="18sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/new_password_text_layout_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/old_password_text_layout_id"
            app:mtf_openKeyboardOnFocus="true"
            app:startIconContentDescription="Enter Email..."
            app:startIconDrawable="@drawable/ic_password">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/new_password_text_view_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:fontFamily="@font/poppins"
                android:hint="@string/enter_new_password"
                android:inputType="textPassword"
                android:minHeight="48dp"
                android:textColor="@color/black"
                android:textColorHint="#5C6BC0"
                android:textSize="18sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.royrodriguez.transitionbutton.TransitionButton
            android:id="@+id/send_transition_button_id"
            android:layout_width="200dp"
            android:layout_height="48dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/button_background"
            android:contentDescription="@string/log_in_image_button_description"
            android:fontFamily="@font/poppins"
            android:scaleType="fitXY"
            android:text="@string/send"
            android:textColor="#82B1FF"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/new_password_text_layout_id"
            app:loaderColor="@color/my_orange" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>